# tensor_contraction

./: CMakeLists.txt  test
coverage_html/: cmd_line  index.html
coverage_html/src/: matrix.cpp.func-c.html  matrix.cpp.func.html  matrix.cpp.gcov.html
include/: matrix.hpp  rowmajor.hpp  tensor.hpp  tensor_contraction.hpp
src/: matrix.cpp  rowmajor.cpp  tensor.cpp  tensor_contraction.cpp
tests/: test_matrix.cpp  test_rowmajor.cpp  test_tensor.cpp  test_tensor_contraction.cpp
